# atlapack

./: .gitignore  ANNOUNCE  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  configure.sh  prepare.sh
doc/: Makefile.am
lapack/: Makefile.am
lapacke/: Makefile.am
meta/: lapack.pc.in  lapacke.pc.in  matgen.pc.in
meta/emacs/: my-makefile.el
scheme/: process.sps  table.scm  test-vicare.sps
scheme/lapacke/: compat.vicare.sls  constants.sls  double-complex.sls  double.sls  float-complex.sls  float.sls
tests/: Makefile.am  atlapack-test-utils.h  cgeqrf.c  dgels.c  dgesv.c  dgesvd.c  dgetrf.c  zgels.c  zgesv.c  zgesvd.c  zgetrf.c
tmglib/: Makefile.am
